Matrix notation - small increment

--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,10 +198,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "However, we have not used matrix notation yet. We have considered the sample as  set of size n. Using matrix notation would mean viewing a sample for a given feature,  as a single data point with n-dimensions and not a set anymore. You'll get p n-dimensional vectors. You could also view a sample as n p-dimensinal vectors.\n",
+        "However, we have not used matrix notation yet. We have considered given sample as a set of size n.\n",
+        "In contrast, using matrix notation would mean viewing a sample for a given feature,  as a single data point with n-dimensions and not a set anymore. You'll get p, n-dimensional vectors. You could also view a sample as n p-dimensinal vectors. But wait on that a bit.\n",
         "\n",
         "Fitting a linear model to data is similar to solving n equations with p variables, with one small difference. We can add an error term to the right side of the equation, so the system always has a solution. However, the trade-off is that there will always be an error, sometimes less sometimes more.\n",
-        "Adding error term was part of method of [least squar](https://en.wikipedia.org/wiki/Least_squares#:~:text=The%20first%20clear%20and%20concise,the%20shape%20of%20the%20Earth.) invented by  Legendre, french matematician.\n",
+        "Adding error term was part of [method of least squars](https://en.wikipedia.org/wiki/Least_squares#:~:text=The%20first%20clear%20and%20concise,the%20shape%20of%20the%20Earth.) invented by  Legendre, french matematician.\n",
         "\n",
         "The equations for a given sample of size n looks likes:\n",
         "$$\n",
@@ -263,7 +264,7 @@
         "There is two linear algebraic interpretations of this:\n",
         "\n",
         "\n",
-        "First interpretation is to have $p$ n-dimensional vectors $x_i = [1, x_{1i}, \\ldots, x_{np}]^T$. Then one can expand the above formula to: 🤯\n",
+        "First interpretation is to have $p$ n-dimensional vectors where $\\mathbf{x}_0 = [1, 1, ..., 1]^T$ and for $j >0 $, $\\mathbf{x}_j = [x_{1i}, \\ldots, x_{nj}]^T$. Then one can expand the above formula to: 🤯\n",
         "\n",
         "$$\n",
         "y =\n",
@@ -303,8 +304,11 @@
         "\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i\n",
         "$$\n",
         "\n",
-        "The right hand of fomula is a linear combinations of all $\\mathbf{x}_i`s$ and the all one vector. The geometric interpretation of it is that we would like y to be in the hyperplane created by span of these $p + 1$ vectors. And subsequently write y as a linear combination of them. If the $p +1 $ vectors are linearly independent and their span include y, this means changing the basis for y.\\\\\n",
-        "Now one can see, the more feature there is compared to the sample size(n), the liklier it gets to have an answer because the span of the vectors is bigger.\n",
+        "The right hand of fomula is a linear combinations of all $\\mathbf{x}_i`s$ and the all one vector. The geometric interpretation of it is that we would like y to be in the hyperplane created by span of these $p + 1$ vectors. And subsequently write y as a linear combination of them.\n",
+        "\n",
+        "Now picture gets more clear. For example if  the $p +1 $ vectors  linearly independent, we can think of  them as a basis and thus writing y in terms of them is change of basis for y.\n",
+        "\n",
+        "Also, one one can see, the more feature there is compared to the sample size(n), the liklier it gets to have an answer because the vectors are gonna span more of the space.\n",
         "\n",
         "\n",
         "\n",
