--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -321,11 +321,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The Second algebraic view HERE!!!\n",
-        " The . To solve the system, one would like  a linear combination of the $x_i$'s that equals to y. Subsequently that means finding $p + 1$ scalars $\\beta_0, /cdots , \\beta_p$.\n",
+        "The second algebraic view can be that there is n vectors, each p + 1 dimensions. For $ 1< i < n$ , $x_i = [y_i, x_{i,1}, ..., x_{ip}]^T$.\n",
         "\n",
         "\n",
-        "2.   List item HERE!!!"
+        "But you are not looking for linear combinations of x_i's to equal to equal to y. In fact you are looking for a plane with p dimensions that all x_i exists on it. consequently you are looking for p scalars that identify such plain (what are those p numbers that identify such plain HERE!!!)\n",
+        "\n",
+        "while it is nice to visualize the data point using second view, we mainly use the first view to solve the system of equations.\n",
+        ""
       ],
       "metadata": {
         "id": "j61xxxCfAC2X"
