--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "id": "-r3NHJOxJL4N",
         "outputId": "649748e6-9df7-4a16-89c2-ff7ffc0420ec"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +138,7 @@
         "id": "zJ36DZ4nK7aE",
         "outputId": "2935f51b-b6c8-4557-db79-3c9d89a8ca1c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "084d3db1-64a8-452b-b273-954a0afb0d92"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +351,7 @@
           "height": 447
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,8 +378,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "HERE!! Oh everything looks so nce and neat without the epsilon. what to do with epsilon??\n",
-        "add a paragraph about history of method of least square (euler, legendre --> gause)"
+        "Without the epsilon term, solving it looks like solving linear equations and there is standard prodecures for it. But now what do we do with epsilon term.\n",
+        "\n",
+        "Let's look into the history of it.\n",
+        "\n",
+        "The method of least squares grew out of the fields of astronomy, as scientists tried to provide solutions to the challenges of navigating the Earth's oceans during the Age of Discovery.\n",
+        "\n",
+        "Their astronomical observations where in form of lots of equations with lots of variables. But observations always have error in them. Thus there was cases that these equation do not have any solution. However, they really wanted a solution. So their trick was to add an error term, and expect that equations to always have solution.\n",
+        "\n",
+        "So they have added error term and set their goal to find a solution that minimizes the error. What to minimize though and why? that was the square of error. And they called it method of least squares. Nowdays, method of least squares is part of Regression, particularly it is one possible loss function.\n",
+        "\n",
+        "Here is a timeline for the development of method: HERE!!!\n",
+        "The method was the culmination of several advances that took place during the course of the eighteenth century:[6]\n",
+        "\n"
       ],
       "metadata": {
         "id": "20tdkyo3Vpf2"
