least squares method

--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -48,12 +48,12 @@
       ],
       "metadata": {
         "id": "19DE6S_AX97z",
-        "outputId": "f0dc28f8-8c22-48bf-cf39-48a1289803aa",
+        "outputId": "6e504cc3-f1e1-4ddc-ef2f-c06edc9481c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,12 +61,12 @@
           "text": [
             "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
             "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 119, done.\u001b[K\n",
-            "remote: Counting objects: 100% (119/119), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (116/116), done.\u001b[K\n",
-            "remote: Total 119 (delta 62), reused 3 (delta 1), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (119/119), 3.07 MiB | 16.36 MiB/s, done.\n",
-            "Resolving deltas: 100% (62/62), done.\n"
+            "remote: Enumerating objects: 125, done.\u001b[K\n",
+            "remote: Counting objects: 100% (125/125), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (122/122), done.\u001b[K\n",
+            "remote: Total 125 (delta 65), reused 3 (delta 1), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (125/125), 3.11 MiB | 17.30 MiB/s, done.\n",
+            "Resolving deltas: 100% (65/65), done.\n"
           ]
         }
       ]
@@ -388,8 +388,9 @@
         "\n",
         "So they have added error term and set their goal to find a solution that minimizes the error. What to minimize though and why? that was the square of error. And they called it method of least squares. Nowdays, method of least squares is part of Regression, particularly it is one possible loss function.\n",
         "\n",
-        "Here is a timeline for the development of method: HERE!!!\n",
-        "The method was the culmination of several advances that took place during the course of the eighteenth century:[6]\n",
+        "Here is a timeline for the development of method:\n",
+        "- The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805.\n",
+        "- The development of a criterion that can be evaluated to determine when the solution with the minimum error has been achieved. Laplace tried to specify a mathematical form of the probability density for the errors and define a method of estimation that minimizes the error of estimation.\n",
         "\n"
       ],
       "metadata": {
