--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,9 +388,14 @@
         "\n",
         "So they have added error term and set their goal to find a solution that minimizes the error. What to minimize though and why? that was the square of error. And they called it method of least squares. Nowdays, method of least squares is part of Regression, particularly it is one possible loss function.\n",
         "\n",
+        "The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805. But there was a series of development that had le to it:\n",
         "Here is a timeline for the development of method:\n",
-        "- The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805.\n",
-        "- The development of a criterion that can be evaluated to determine when the solution with the minimum error has been achieved. Laplace tried to specify a mathematical form of the probability density for the errors and define a method of estimation that minimizes the error of estimation.\n",
+        "- The combination of different observations as being the best estimate of the true value. It means they were trying to find approximate solution for a system of equation that was obtained from obesrvations.\n",
+        "- The development of a criterion that can be evaluated to determine when the solution with the the minimum error has been achieved.\n",
+        "\n",
+        "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies. In that work he claimed to have been in possession of the method of least squares since 1795. This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. In practice it means to assume $\\epsilon_i$ has a normal disribution. The assumptin helps a lot when trying to minimize the sum of squared errors.\n",
+        "\n",
+        "In fact if there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors. that is why sum of squared error and normal distribution are tied together.  HERE!!!\n",
         "\n"
       ],
       "metadata": {
