method of least square

--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -325,7 +325,7 @@
         "\n",
         "\n",
         "But you are not looking for linear combinations of x_i's to equal to equal to y. In fact you are looking for a plane with p dimensions that all x_i exists on it. consequently you are looking for p scalars that identify such plain.\n",
-        "So we are hoping they all fall on a p dimensional plane becuase we think there are p basis that can span all n points. However the p dimensional plain doesnt have to pass vector 0, so we need P + 1 st scalar to determine where where plaine meets y axes for when all x's are 0. HERE!!!\n",
+        "So we are hoping they all fall on a p dimensional plane becuase we think there are p basis that can span all n points. However the p dimensional plain doesnt have to pass vector 0, so we need p + 1 such scalars to determine where  the plain meets y axes for when all x's are 0.\n",
         "these  p + 1 numbers are going to determine such plain.\n",
         "\n",
         "while it is nice to visualize the data point using second view, we mainly use the first view to solve the system of equations. Let's find such hyperplane for our sample data points ( or n vectors of 2-dimensional )\n"
@@ -388,14 +388,19 @@
         "\n",
         "So they have added error term and set their goal to find a solution that minimizes the error. What to minimize though and why? that was the square of error. And they called it method of least squares. Nowdays, method of least squares is part of Regression, particularly it is one possible loss function.\n",
         "\n",
-        "The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805. But there was a series of development that had le to it:\n",
+        "The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805. But there was a series of development that had led to it:\n",
         "Here is a timeline for the development of method:\n",
         "- The combination of different observations as being the best estimate of the true value. It means they were trying to find approximate solution for a system of equation that was obtained from obesrvations.\n",
         "- The development of a criterion that can be evaluated to determine when the solution with the the minimum error has been achieved.\n",
         "\n",
-        "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies. In that work he claimed to have been in possession of the method of least squares since 1795. This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. In practice it means to assume $\\epsilon_i$ has a normal disribution. The assumptin helps a lot when trying to minimize the sum of squared errors.\n",
+        "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies. In that work he claimed to have been in possession of the method of least squares since 1795. This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. In practice it means to assume $\\epsilon_i$'s has a normal disribution. The assumptin helps a lot when trying to minimize the sum of squared errors.\n",
         "\n",
-        "In fact if there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors. that is why sum of squared error and normal distribution are tied together.  HERE!!!\n",
+        "Now one might ask why using method of least square as a loss function for linear regression.\n",
+        "One observation can help answer this.\n",
+        "In fact if there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors.\n",
+        "In that case $y = [y_1, ..., y_n]^T$ and we would like to find best $\\beta_0$ to fit $y = \\beta_0 $. Then we need to minimize $\\sum{(y_i - \\beta_0)^2}$. One can easily check mean of y's does that.\n",
+        "(Unbiased???)\n",
+        " that is why sum of squared error and normal distribution are tied together.  HERE!!!\n",
         "\n"
       ],
       "metadata": {
