--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -395,7 +395,7 @@
         "\n",
         "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies. In that work he claimed to have been in possession of the method of least squares since 1795. This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. In practice it means to assume $\\epsilon_i$'s has a normal disribution. The assumptin helps a lot when trying to minimize the sum of squared errors.\n",
         "\n",
-        "Now one might ask why using method of least square as a loss function for linear regression.\n",
+        "One might ask why would we use method of least square as a loss function for linear regression.\n",
         "One observation can help answer this.\n",
         "In fact if there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors.\n",
         "In that case $y = [y_1, ..., y_n]^T$ and we would like to find best $\\beta_0$ to fit $y = \\beta_0 $. Then we need to minimize $\\sum{(y_i - \\beta_0)^2}$. One can easily check mean of y's does that.\n",
