--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -390,17 +390,20 @@
         "\n",
         "The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805. But there was a series of development that had led to it:\n",
         "Here is a timeline for the development of method:\n",
-        "- The combination of different observations as being the best estimate of the true value. It means they were trying to find approximate solution for a system of equation that was obtained from obesrvations.\n",
-        "- The development of a criterion that can be evaluated to determine when the solution with the the minimum error has been achieved.\n",
+        "- The combination of different observations as being the best estimate of the true value. This is the historical point where the error term appeared in the linear system of equations. It guarantees that the system always has a solution.\n",
+        "- The development of a criterion that can be evaluated to determine when the solution with the the minimum error has been achieved. This is how they deal with erro term.\n",
         "\n",
         "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies. In that work he claimed to have been in possession of the method of least squares since 1795. This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. In practice it means to assume $\\epsilon_i$'s has a normal disribution. The assumptin helps a lot when trying to minimize the sum of squared errors.\n",
         "\n",
         "One might ask why would we use method of least square as a loss function for linear regression.\n",
         "One observation can help answer this.\n",
         "In fact if there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors.\n",
-        "In that case $y = [y_1, ..., y_n]^T$ and we would like to find best $\\beta_0$ to fit $y = \\beta_0 $. Then we need to minimize $\\sum{(y_i - \\beta_0)^2}$. One can easily check mean of y's does that.\n",
-        "(Unbiased???)\n",
-        " that is why sum of squared error and normal distribution are tied together.  HERE!!!\n",
+        "In that case $y = [y_1, ..., y_n]^T$ and we would like to find best $\\beta_0$ to fit $y = \\hat{\\beta_0 }$. Then we need to minimize $\\sum{(y_i - \\hat{\\beta_0})^2}$.\n",
+        "\n",
+        "If we use the $\\hat{\\beta_0}$ calculated for the sample to estimate the $\\beta_0$ for the whole population or better to say the real y for population, this estimation is *unbiased*. It means on average we expect $\\hat{\\beta_0} to equal to ${\\beta_0}$. Hence and unbiased estimator does not systemically over- or under-estimate the true value. HERE!! (page 83)\n",
+        "\n",
+        "\n",
+        " that is why sum of squared error and normal distribution are tied together.  FINISH not book HERE!!! NEXT NOTE BOOK about statistics or measure on sample and their sampling distro, sampling variation and expectation....\n",
         "\n"
       ],
       "metadata": {
