Unbiased estimator - loss funciton

--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -380,9 +380,9 @@
       "source": [
         "Without the epsilon term, solving it looks like solving linear equations and there is standard prodecures for it. But now what do we do with epsilon term.\n",
         "\n",
-        "Let's look into the history of it.\n",
+        "Let's take a look into the history of it.\n",
         "\n",
-        "The method of least squares grew out of the fields of astronomy, as scientists tried to provide solutions to the challenges of navigating the Earth's oceans during the Age of Discovery.\n",
+        "The method of least squares grew out of the fields of astronomy, as scientists tried to provide solutions to the challenges of navigating the Earth's oceans.\n",
         "\n",
         "Their astronomical observations where in form of lots of equations with lots of variables. But observations always have error in them. Thus there was cases that these equation do not have any solution. However, they really wanted a solution. So their trick was to add an error term, and expect that equations to always have solution.\n",
         "\n",
@@ -400,7 +400,10 @@
         "In fact if there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors.\n",
         "In that case $y = [y_1, ..., y_n]^T$ and we would like to find best $\\beta_0$ to fit $y = \\hat{\\beta_0 }$. Then we need to minimize $\\sum{(y_i - \\hat{\\beta_0})^2}$.\n",
         "\n",
-        "If we use the $\\hat{\\beta_0}$ calculated for the sample to estimate the $\\beta_0$ for the whole population or better to say the real y for population, this estimation is *unbiased*. It means on average we expect $\\hat{\\beta_0} to equal to ${\\beta_0}$. Hence and unbiased estimator does not systemically over- or under-estimate the true value. HERE!! (page 83)\n",
+        "If we use the $\\hat{\\beta_0}$ calculated for the sample to estimate the $\\beta_0$ for the whole population or better to say the real y for population, this estimation is *unbiased*. It means on average we expect $\\hat{\\beta_0}$ to equal to ${\\beta_0}$. Hence and unbiased estimator does not systemically over- or under-estimate the true value.\n",
+        "\n",
+        "So basically when predictors are 0 dimensional, then benefit of using method of least square as loss function is the answer we find is unbiased over all samples. For example loss function (HERE!!! find one biased thing (y - y_i)^4??) would not be unbiases.\n",
+        "HERE!! (page 83)\n",
         "\n",
         "\n",
         " that is why sum of squared error and normal distribution are tied together.  FINISH not book HERE!!! NEXT NOTE BOOK about statistics or measure on sample and their sampling distro, sampling variation and expectation....\n",
