--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -395,58 +395,36 @@
         "\n",
         "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies. In that work he claimed to have been in possession of the method of least squares since 1795. This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. In practice it means to assume $\\epsilon_i$'s has a normal disribution. The assumptin helps a lot when trying to minimize the sum of squared errors.\n",
         "\n",
+        "## Conclusion\n",
+        "\n",
         "One might ask why would we use method of least square as a loss function for linear regression.\n",
-        "One observation can help answer this.\n",
-        "In fact if there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors.\n",
+        "\n",
+        "Here is an observation that helps answer above question:\n",
+        "\n",
+        "WHen there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors.\n",
         "In that case $y = [y_1, ..., y_n]^T$ and we would like to find best $\\beta_0$ to fit $y = \\hat{\\beta_0 }$. Then we need to minimize $\\sum{(y_i - \\hat{\\beta_0})^2}$.\n",
         "\n",
-        "If we use the $\\hat{\\beta_0}$ calculated for the sample to estimate the $\\beta_0$ for the whole population or better to say the real y for population, this estimation is *unbiased*. It means on average we expect $\\hat{\\beta_0}$ to equal to ${\\beta_0}$. Hence and unbiased estimator does not systemically over- or under-estimate the true value.\n",
+        "If we use the $\\hat{\\beta_0}$ calculated for the sample to estimate the $\\beta_0$ for the whole population or better to say the real y for population, this estimation is *unbiased*. It means on average we expect $\\hat{\\beta_0}$ to equal to ${\\beta_0}$. Hence an unbiased estimator does not systemically over- or under-estimate the true value.\n",
         "\n",
-        "So basically when predictors are 0 dimensional, then benefit of using method of least square as loss function is the answer we find is unbiased over all samples. For example loss function (HERE!!! find one biased thing (y - y_i)^4??) would not be unbiases.\n",
-        "HERE!! (page 83)\n",
+        "So basically when predictors are 0 dimensional,  benefit of using method of least square as loss function, estimators would be unbiased over all samples.\n",
         "\n",
         "\n",
-        " that is why sum of squared error and normal distribution are tied together.  FINISH not book HERE!!! NEXT NOTE BOOK about statistics or measure on sample and their sampling distro, sampling variation and expectation....\n",
+        "  In fact under the assumption of normally distributed errors, the least squares estimates have desirable properties such as being unbiased and having minimum variance among all linear estimators. That is one of the reasons that  method of least squares and normal distribution are tied together.\n",
+        "  \n",
+        "  Another reason is that even if the underlying data are not normally distributed, the central limit theorem implies that the distribution of the sum of many independent, identically distributed random variables tends toward a normal distribution as the number of variables increases.\n",
+        "  \n",
+        "  \n",
+        "This concludes this not book. Next notebook we try to look at the model coefficients ($\\beta_i$'s ) as summary statistics defined on samples. You can also think of them as measures since samples are subsets.  \n",
+        "\n",
+        "Then we look at  expected value of sample statistices over multiple sampling. Also we look at variance of stuff within sample, and variance of sample   stat over several samplings. This indeed is an intersting case when sample stat is defined to be the mean of sample.\n",
+        "\n",
+        "\n",
+        "These can help understand concept of Standard Error and F-test better.\n",
         "\n"
       ],
       "metadata": {
         "id": "20tdkyo3Vpf2"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "import p"
-      ],
-      "metadata": {
-        "id": "q-O-oT46KhHC"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "At first glance, it looks like we can model these as p  (number of features) in n-dimensional space. And then we can define the purpose to be to find a linear combination of given p points that is equal to y which is another n dimensional vector. That means we sould like that span of p vectors, capture vector y.\n",
-        "\n",
-        "But the graphs are another view that is p+1 dimensional space and n points and fitting a linear surface. why? HERE!!!"
-      ],
-      "metadata": {
-        "id": "yQB89VbbFY-y"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Kpave9KfUT6V"
-      },
-      "outputs": [],
-      "source": [
-        "We haven't used any matrix notation yet. Let's switch to matrix notation.\n",
-        "At first glance, it looks like we can model these as p  (number of features) in n-dimensional space. And then we can define the purpose to be to find a linear combination of given p points that is equal to y which is another n dimensional vector. That means we sould like that span of p vectors, capture vector y.\n",
-        "\n",
-        "But the graphs are another view that is p+1 dimensional space and n points and fitting a linear surface. why? HERE!!!"
-      ]
     }
   ],
   "metadata": {
