Add History of method of least square

--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -384,14 +384,17 @@
         "\n",
         "The method of least squares grew out of the fields of astronomy, as scientists tried to provide solutions to the challenges of navigating the Earth's oceans.\n",
         "\n",
-        "Their astronomical observations where in form of lots of equations with lots of variables. But observations always have error in them. Thus there was cases that these equation do not have any solution. However, they really wanted a solution. So their trick was to add an error term, and expect that equations to always have solution.\n",
+        "Their astronomical observations where in form of lots of equations with lots of variables. But observations always have error in them.\n",
+        "One historical point that helped advance this method was that, they figured if you try to solve equations in aggregation, errors decreases rather than increase, perhaps first expressed by Roger Cotes in 1722.\n",
         "\n",
-        "So they have added error term and set their goal to find a solution that minimizes the error. What to minimize though and why? that was the square of error. And they called it method of least squares. Nowdays, method of least squares is part of Regression, particularly it is one possible loss function.\n",
+        "But since the system is not exact, there was cases that these equation do not have any solution. However, they really wanted a solution.\n",
         "\n",
-        "The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805. But there was a series of development that had led to it:\n",
-        "Here is a timeline for the development of method:\n",
-        "- The combination of different observations as being the best estimate of the true value. This is the historical point where the error term appeared in the linear system of equations. It guarantees that the system always has a solution.\n",
-        "- The development of a criterion that can be evaluated to determine when the solution with the the minimum error has been achieved. This is how they deal with erro term.\n",
+        "So their trick was to add an error term, and expect that equations to always have solution. So any given solution finds the value of error term as well as values for unknown variables.\n",
+        "\n",
+        " But best solution is the one that minimizes  the overal error. But how to define the criterion for overal error term? that was the sume of square of errors. And they called it method of least squares. Nowdays, method of least squares is part of Regression, particularly it is one possible loss function.\n",
+        "\n",
+        "\n",
+        "The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805. But before him there was some work on  developing a criterion  to determine which  solution has the minimum error. Namely,  Laplace tried to specify a mathematical form of the probability density for the errors and define a method of estimation that minimizes the error of estimation.\n",
         "\n",
         "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies. In that work he claimed to have been in possession of the method of least squares since 1795. This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. In practice it means to assume $\\epsilon_i$'s has a normal disribution. The assumptin helps a lot when trying to minimize the sum of squared errors.\n",
         "\n",
