Sampling stat section

--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -33,6 +33,12 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Summary Statistic\n",
+        "\n",
+        "https://en.wikipedia.org/wiki/Sampling_distribution\n",
+        "start with mu but get to beta_i HERE!!!\n",
+        "\n",
+        "\n",
         "notebook we try to look at the model coefficients ( 𝛽𝑖 's ) as summary statistics defined on samples. You can also think of them as measures since samples are subsets.\n",
         "\n",
         "Then we look at expected value of sample statistices over multiple sampling. Also we look at variance of stuff within sample, and variance of sample stat over several samplings. This indeed is an intersting case when sample stat is defined to be the mean of sample.\n",
