--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -35,13 +35,31 @@
       "source": [
         "### Summary Statistic\n",
         "\n",
+        "Previously we explained the concept of population and the concept of sample. Basically we have one population (e.g., population of American people) but we can sample a subset in many ways (e.g., sample of America people under age 18, sample of American people living in new your, etc).\n",
+        "\n",
+        "In fact if N is population size, there is $2^N$ samples.\n",
+        "\n",
+        "Now a statistic or measure can be defined on the whole population as well as any given sample. A statistic or a measure in mathematic is a generalization of concepts such as lenght or heigh for a given set. Since samples and the population are sets, we can define such things on them. A well known one is mean. Thus you can think of population mean or any given sample mean.\n",
+        "\n",
+        "So far it was fairly easy to explain things. But it gets a bit trickier when we wanna talk the distribution of such measures over allll samples and compare them with the value of measure on the poulation.\n",
+        "\n",
+        "The motivation behind sampling is that population is too big and it is virtually impossible to calculate the mean for the whole population. Let's say as a minister of something you need the average age of your population.  HERE!!!\n",
+        "\n",
+        "\n",
+        "\n",
         "https://en.wikipedia.org/wiki/Sampling_distribution\n",
         "start with mu but get to beta_i HERE!!!\n",
+        "The concept of unbiased estimator pops up one more time. HERE!!!\n",
+        "\n",
+        "\n",
+        "Then we look at expected value of sample statistices over multiple sampling. Also we look at variance of stuff within sample, and variance of sample stat over several samplings. This indeed is an intersting case when sample stat is defined to be the mean of sample. HERE!!!\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "notebook we try to look at the model coefficients ( 𝛽𝑖 's ) as summary statistics defined on samples. You can also think of them as measures since samples are subsets.\n",
         "\n",
-        "Then we look at expected value of sample statistices over multiple sampling. Also we look at variance of stuff within sample, and variance of sample stat over several samplings. This indeed is an intersting case when sample stat is defined to be the mean of sample.\n",
+        "\n",
         "\n",
         "These can help understand concept of Standard Error and F-test better."
       ],
